# hw_sp_module4

./: .coverage  .gitignore  README.md  main.py  pyproject.toml
htmlcov/: class_index.html  function_index.html  index.html  main_py.html  status.json  z_a44f0ac069e85531___init___py.html  z_a44f0ac069e85531_conftest_py.html  z_a44f0ac069e85531_test_main_py.html
src/: base_product.py  category.py  print_mixin.py  product.py
tests/: conftest.py  test_category.py  test_main.py  test_print_mixin.py  test_product.py
